# code-scan-sec

./: .gitignore  CHANGELOG.md  CHANGELOG_V4.md  CONTRIBUTING.md  Dockerfile  ENHANCEMENTS_v3.3.md  IMPROVEMENTS.md  README.ar.md  README.md  README_V4.md  TYPE_HINTS_AUDIT_REPORT.md  TYPE_HINTS_FIX_SUMMARY.md  USAGE_GUIDE.md  USAGE_GUIDE_AR.md  USER_GUIDE.ar.md  V4_UPGRADE_SUMMARY.md  action.yml  api_server.py  auto_fix.py  benchmark.py  blackbox_tester.py  config.py  config.yaml  dashboard.html  dashboard_enhanced.html  database.py  install.sh  logger.py  main_cli.py  pyproject.toml  report_generator.py  requirements.txt  rules.txt  run-scan.sh  scanner.py  scanner_gui.py  test-secret.txt  test.js  test_json_fix.py  tmp.secret.js  (+4 more)
.github/workflows/: scan.yml  security-scan-pr.yml  security-scan.yml  security_scan.yml
ai_providers/: base_provider.py  claude_provider.py  gemini_provider.py  openai_provider.py
archive/: scanner_backup.py
config/: ignore.txt  rules.txt
docs/: CI-CD-INTEGRATION.md  FEATURES-v3.md
examples/: basic_usage.py
lib/: functions.sh
modules/: __init__.py  benchmark_engine.py  blackbox_scanner.py  csv_exporter.py  data_models.py  local_scanner.py  pdf_generator.py  plugin_system.py  rules_engine.py  update_checker.py  url_scanner_enhanced.py
output/: report.html  report.md  results.json  results.txt
security_scan_cli.egg-info/: SOURCES.txt  requires.txt
test-project/: hello.txt  passwords.env  secret.js  test.js
tests/: conftest.py  test_auto_fix.py  test_config.py  test_vulnerability_scanner.py
